--- a/MainBoardODR/MainBoardODR.ioc
+++ b/MainBoardODR/MainBoardODR.ioc
@@ -27,6 +27,7 @@ KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
+Mcu.IP10=TIM6
 Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -35,7 +36,7 @@ Mcu.IP6=SYS
 Mcu.IP7=TIM1
 Mcu.IP8=TIM2
 Mcu.IP9=TIM3
-Mcu.IPNb=10
+Mcu.IPNb=11
 Mcu.Name=STM32F334K(4-6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF1 / OSC_OUT
@@ -64,13 +65,14 @@ Mcu.Pin29=VP_TIM2_VS_no_output1
 Mcu.Pin3=PA2
 Mcu.Pin30=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin31=VP_TIM3_VS_no_output1
+Mcu.Pin32=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin4=PA3
 Mcu.Pin5=PA4
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB0
-Mcu.PinsNb=32
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F334K8Tx
@@ -93,6 +95,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM6_DAC1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=MUX_OUT
@@ -196,7 +199,7 @@ PF1\ /\ OSC_OUT.GPIO_Label=MOTOR_IN_1_1
 PF1\ /\ OSC_OUT.Locked=true
 PF1\ /\ OSC_OUT.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -280,6 +283,9 @@ TIM3.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 No Output,Prescaler,Period
 TIM3.Period=10000
 TIM3.Prescaler=48
+TIM6.IPParameters=Prescaler,Period
+TIM6.Period=1000
+TIM6.Prescaler=48
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
@@ -296,5 +302,7 @@ VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM3_VS_no_output1.Mode=PWM Generation1 No Output
 VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
 isbadioc=false
